alteração do redirecionamento

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h>Sistema de Cadastro</h>
 
+<button> <a href="./index2.html">  My name is Nicolas </a> </button>
+    
     <script src="app.js"></script>
+
+
+
 </body>
 </html>
