--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,10 @@
     <title>Oi eu sou o Nicolas</title>
 </head>
 <body>
-    "hello, more this way  "
+    "hello, more this way "
+
+    I am Nicolas de Lima, your teacher!
+
+
 </body>
 </html>
